<resources>
    <string name="app_name">App_EcoCity</string>
    <string name="Correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidaste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="no_tienes_cuenta_reg_strame">¿No tienes cuenta? Regístrate</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="Registro">Registro</string>
    <string name="email">Email</string>
    <string name="email_email_com">email@email.com</string>
    <string name="usuario">Usuario</string>
    <string name="usuario_hint">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a_hint">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="confirmar_contrase_a_hint">Confirmar contraseña</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="Incidencias">Incidencias</string>
    <string name="NuevaIncidencia">Nueva Incidencia\n</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="NivelPrioridad">Nivel de Prioridad</string>
    <string name="foto">Foto</string>
    <string name="ubicacion">Ubicación</string>
    <string name="elegir_ubicacion">Elegir Ubicación</string>
    <string name="guardar_incidencia">Guardar Incidencia</string>
    <string name="pulsa_para_insertar_imagen">Pulsa para insertar imagen...</string>
    <string name="EditarIncidencia">Editar Incidencia</string>
    <string name="borrar_incidencia">Borrar Incidencia</string>
    <string name="Informacion">Información</string>
    <string name="enviar_correo">Envíar correo</string>
    <string name="restablecer_contrasena">Restablecer Contraseña</string>
    <string name="google_maps_key">AIzaSyBFp9cnI6ZaFOMZdmnZTj5PHw2-EJBeL78</string>
    <string name="confirmar_ubicacion">Confirmar ubicación</string>
    <string name="usar_mi_ubicacion">Usar mi ubicación</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="chat">Chat</string>
</resources>