<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarRegistro"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/celeste"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_flecha_atras"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Registro"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_email_com"
                    android:background="#F0EEF3"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_hint"
                    android:background="#F0EEF3"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contrase_a"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a_hint"
                    android:background="#F0EEF3"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                    android:inputType="textPassword"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmar_contrase_a"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmar_contrase_a_hint"
                    android:background="#F0EEF3"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                    android:inputType="textPassword"/>

                <CheckBox
                    android:id="@+id/terminos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acepto_los_t_rminos_y_condiciones"
                    android:textSize="18sp"
                    android:layout_marginBottom="24dp"/>

                <Button
                    android:id="@+id/BotonRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/registrarse"
                    android:backgroundTint="@color/azul"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>