<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main"
        android:padding="32dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo_ecocity"
                android:scaleType="centerCrop"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/IniciarSesion"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/iniciar_sesi_n" />

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/IniciarSesion"
                android:layout_marginTop="20dp"
                android:hint="@string/Correo"
                android:padding="10dp" />

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/correo"
                android:layout_marginTop="20dp"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/azul"
                android:text="@string/ingresar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Olvidar_contraseña"
                android:textColor="@color/material_dynamic_primary40"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/olvidaste_la_contrase_a" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registrame"
                android:textColor="@color/material_dynamic_primary40"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/no_tienes_cuenta_reg_strame" />
        </LinearLayout>


    </LinearLayout>
</layout>
