<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TOOLBAR -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarChat"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/celeste"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Botón volver -->
                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:src="@drawable/ic_flecha_atras"
                    android:padding="16dp" />

                <!-- Título -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chat"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </FrameLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <!-- LISTA DE MENSAJES -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/toolbarChat"
            app:layout_constraintBottom_toTopOf="@id/layoutInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- INPUT INFERIOR -->
        <LinearLayout
            android:id="@+id/layoutInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/etMensaje"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/escribe_tu_mensaje"
                android:background="@android:drawable/edit_text"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:backgroundTint="@color/azul"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>